fixed menu button not showing up well on mobile, fixed margins being too large on mobile

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -12,7 +12,6 @@
 
 .menuStyle {
   margin: 20px;
-  float: right;
 }
 
 .modalLinks * {
